refactor: add module settings

--- a/authenticator/application/src/main/resources/application.yml
+++ b/authenticator/application/src/main/resources/application.yml
@@ -1,10 +1,8 @@
-server:
-  port: 9999
-
 spring:
   config:
-    import: 'classpath:/application-infrastructure.yml'
-
+    import:
+      - application-infrastructure.yml
+      - application-presentation.yml
 
 logging:
   level:
