--- a/authenticator/infrastructure/src/main/resources/application-infrastructure.yml
+++ b/authenticator/infrastructure/src/main/resources/application-infrastructure.yml
@@ -1,17 +1,23 @@
 spring:
   datasource:
     url: jdbc:h2:mem:test
-    username: sa
-    password: password
+    username: CHOICORE
+    password:
     driverClassName: org.h2.Driver
 
   jpa:
     open-in-view: false
     hibernate:
       ddl-auto: create
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.H2Dialect
+        auto_quote_keyword: true
+
+  h2:
+    console:
+      enabled: true
+
 
